# mynewsrobot

./: .dockerignore  .env.example  .gitignore  Architecture.md  CapstoneInfo.md  Dockerfile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_PLAN.md  QUICKREF.md  README.md  Requirements.md  cloudbuild.yaml  discovered_articles.json  pyproject.toml  requirements.txt  setup.ps1  test_wordpress_auth.py  test_wordpress_publish.py  test_workflow_local.py
config/: news_sources.yaml  topic_priorities.yaml  weekly_bookmarks.yaml  wordpress.yaml  writing_style.yaml
docs/: setup.md
src/: __init__.py  analyzed_articles.json  discovered_articles.json  main.py  news_scraper.py  newsletter_draft.html
src/agents/: __init__.py  content_analysis_agent.py  content_extraction_agent.py  content_writing_agent.py  news_research_agent.py  publishing_agent.py
src/tools/: __init__.py  bookmark_loader_tool.py  topic_priorities_tool.py  web_scraper_tool.py  wordpress_tool.py
src/utils/: __init__.py  config_loader.py  date_formatter.py  memory_manager.py
src/workflow/: __init__.py
tests/: __init__.py  test_agents.py  test_bookmark_loader_tool.py  test_config_loader.py  test_web_scraper_tool.py  test_wordpress_tool.py  test_workflow.py
